--- a/templates/result.html
+++ b/templates/result.html
@@ -15,6 +15,20 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow-y: scroll;
+        }
+
+        p:hover::after {
+            content: attr(data-description);
+            display: block;
+            position: 0;
+            top: 50%;
+            left: 50%;
+            background-color: #F4E8C2;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            z-index: 1;
         }
 
         .container {
@@ -50,13 +64,13 @@
     <div class="container">
         <h1>APCaS</h1>
 
-        <p>Average Revenue: <span class="black-text">{{ metrics.average_revenue }}</span></p>
-        <p>Operating Cost: <span class="{{ 'green' if metrics.operating_cost|int > 0 else 'red' }}">{{ metrics.operating_cost }}</span></p>
-        <p>Gross Profit: <span class="{{ 'green' if metrics.gross_profit|int > 0 else 'red' }}">{{ metrics.gross_profit }}</span></p>
-        <p>Gross Profit Margin Rate: <span class="{{ 'green' if metrics.gross_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.gross_profit_margin_rate }}%</span></p>
-        <p>Operating Profit Margin Rate: <span class="{{ 'green' if metrics.operating_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.operating_profit_margin_rate }}%</span></p>
-        <p>Net Profit Margin Rate: <span class="{{ 'green' if metrics.net_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.net_profit_margin_rate }}%</span></p>
-        <p>Return of Investment: <span class="{{ 'green' if metrics.return_of_investment|int > 0 else 'red' }}">{{ metrics.return_of_investment }}%</span></p>
+        <p data-description="{{descriptions.average_revenue}}">Average Revenue: <span class="black-text">{{descriptions.currency_symbol}}{{ metrics.average_revenue }}</span></p>
+        <p data-description="{{descriptions.operating_cost}}">Operating Cost: <span class="{{ 'green' if metrics.operating_cost|int > 0 else 'red' }}">{{descriptions.currency_symbol}}{{ metrics.operating_cost }}</span></p>
+        <p data-description="{{descriptions.gross_profit}}">Gross Profit: <span class="{{ 'green' if metrics.gross_profit|int > 0 else 'red' }}">{{descriptions.currency_symbol}}{{ metrics.gross_profit }}</span></p>
+        <p data-description="{{descriptions.gross_profit_margin_rate}}">Gross Profit Margin Rate: <span class="{{ 'green' if metrics.gross_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.gross_profit_margin_rate }}%</span></p>
+        <p data-description="{{descriptions.operating_profit_margin_rate}}">Operating Profit Margin Rate: <span class="{{ 'green' if metrics.operating_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.operating_profit_margin_rate }}%</span></p>
+        <p data-description="{{descriptions.net_profit_margin_rate}}">Net Profit Margin Rate: <span class="{{ 'green' if metrics.net_profit_margin_rate|int > 0 else 'red' }}">{{ metrics.net_profit_margin_rate }}%</span></p>
+        <p data-description="{{descriptions.return_of_investment}}">Return of Investment: <span class="{{ 'green' if metrics.return_of_investment|int > 0 else 'red' }}">{{ metrics.return_of_investment }}%</span></p>
     </div>
 </body>
 </html>
